# CNSDKGettingStartedGLAndroidNative

./: .gitattributes  .gitignore  Readme.md  build.gradle  gradle.properties  settings.gradle
CNSDK/include/leia/common/: Renderer.h  RendererMath.h  api.h  assert.h  assetManager.hpp  capi.utils.hpp  defines.h  exception.hpp  filesystem.hpp  jniTypes.h  log.h  log.hpp  mathUtils.hpp  platform.hpp  sharedCameraSink.hpp  slice.hpp  slice.vector.hpp  types.h  types.hpp  utils.hpp  version.h
CNSDK/include/leia/common/android/: jniLoader.hpp
CNSDK/include/leia/common/opengl/: api.h  shader.hpp  utils.hpp
CNSDK/include/leia/common/windows/: windowsPlatform.hpp
CNSDK/include/leia/device/: api.h  device.hpp
CNSDK/include/leia/headTracking/common/: api.h  frame.h  frameAdapter.hpp  log.hpp  types.h  types.hpp
CNSDK/include/leia/headTracking/engine/: api.h  config.h  engine.hpp
CNSDK/include/leia/headTracking/engine/core/: camera.common.hpp  camera.hpp  debug.hpp  faceDetector.hpp  faceTracker.hpp  kalmanFilter.hpp  sharedCamera.hpp
CNSDK/include/leia/headTracking/engine/realsense/: realsenseCamera.hpp
CNSDK/include/leia/headTracking/engine/wrappers/c/: engine.h
CNSDK/include/leia/headTracking/service/: api.h  client.hpp  common.hpp  config.h  log.hpp
CNSDK/include/leia/sdk/: api.h  config.h  debugMenu.hpp  enums.hpp  gui.hpp  helpers.hpp  image.h  interlacer.hpp  ml.hpp  sdk.hpp  shaders.hpp
CNSDK/include/leia/sdk/imgui/: config.hpp
CNSDK/include/leia/sdk/wrappers/c/: sdk.h
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
